css/style.css
/* ... */
@font-face {
	font-family: 'Muli-Light';
	src: url('../fonts/Muli-Light.eot');
	src: local('☺'),  url('../fonts/Muli-Light.woff') format('woff'),  url('../fonts/Muli-Light.ttf') format('truetype'),  url('../fonts/Muli-Light.svg') format('svg');
	font-weight: normal;
	font-style: normal;
}
@font-face {
	font-family: 'NixieOne';
	src: url('../fonts/NixieOne-Regular.eot');
	src: local('☺'),  url('../fonts/NixieOne-Regular.woff') format('woff'),  url('../fonts/NixieOne-Regular.ttf') format('truetype'),  url('../fonts/NixieOne-Regular.svg') format('svg');
	font-weight: normal;
	font-style: normal;
}*/
/*-------------------------------------------------------------*/

body {
	background-color: #f6f6f6;
	
	margin: 0;
}
#page {
	width: 960px;
	margin: 0 auto;
	padding: 96px 0 0;
    padding-right: 0px;
/*    position: relative;
	float: left; possible addition with reformatting to make it not so close to left edge

	margin-left: 50px;*/
}
img {
	border: 0;
}
/*------------------------------ Sprites ------------------------------*/
#header span.shadow, #footer span.shadow, #sidebar li.selected > a, #sidebar li > a:hover {
	background: url(../images/web/shadows.png) repeat-x;
}
.frame1, .frame2{
	background: url(../images/web/frames.png) no-repeat;
}
.play1, .play2, .play3, .btn, .previous, .next, #performances #sidebar span.more {
	background: url(../images/web/buttons.png) no-repeat;
}
.video1, .video2, .video3 {
	background: url(../images/web/frame-videos.png) no-repeat;
}
#sidebar, #sidebar .section, #sidebar .section > div, #contactbox, #contactbox > div, #contactbox > div > div {
	background-image: url(../images/web/bg-sidebar.png);
	background-repeat: no-repeat;
}
#featured, #footer div.section, #contact > div {
	background: url(../images/web/separators.png) no-repeat;
}
#blogs li, #blogs div.header, #blogs div.details {
/*	background-image: url(../images/web/bg-blog-content.png);
	background-repeat: no-repeat;*/
}
#info li, #info div.header, #info div.details {
	background-image: url(../images/web/bg-blog-content.png);
	background-repeat: no-repeat;
}

#connect > a {
	background: url(../images/web/icons.png) no-repeat;
}

.frame1 {
	float: right;
	background-position: 0 bottom;
	height: 510px;
	width: 444px;
	margin: 0 4px 30px 36px;
	padding: 18px 18px 32px 33px;
	overflow: hidden;
}
.frame2 {
	background-position: 0 -259px;
	height: 379px;
	width: 547px;
	margin: 0 0 12px;
	padding: 17px 40px 30px 18px;
	overflow: hidden;
}
.frame3 {
	height: 199px;
	width: 131px;
	padding: 0px 19px 15px 9px;
	overflow:hidden;
}
.frame4 {
	float: left;

	height: 300px;
	width: 960px;
	margin: 0px 1px 36px 0px;
	padding: 18px 11px 0px 0px;
	overflow: hidden;
}
#contactbox {
	background-position: -323px bottom;
	margin: 0 0 30px;
	padding: 0 0 8px;
}
#contactbox > div {
	background-position: -643px 0;
	padding-top: 8px;
 *padding-bottom: 1px; /** Needed for IE7 **/
}
#contactbox > div > div {
	background-position: 0 0;
	background-repeat: repeat-y;
	padding: 24px 40px 0 20px;
}

/*------------------------------- Links ------------------------------*/
a:link {text-decoration:none;color:#000}  /* unvisited link */
	a:visited {text-decoration:none;color:#006} /* visited link */
	a:hover{text-decoration:underline;}   /* mouse over link */
	a:active{text-decoration:underline;}
    

/*------------------------------ CONTAINER ---------------------------*/
#container {
    margin: 1em auto 0 auto;
    height: auto;
    width: 931px;

/*	box-shadow: 0px 0px 7px #999;
*/
/*    background-color: #fff;
*/    overflow-y: hidden;
    display table;
    border-collapse: collapse;
    margin-left: 0px;
}

#facility
{
	margin-top: 50px;
}

/*-----------site nav-------------*/
#sitenav
{


    background: #F9F6EF none repeat scroll 0% 0%;
    color: #252525;
    width: 100%;
    border-top: 1px solid #D1CFC7;
    border-bottom: 1px solid #D1CFC7;
    position: relative;
    float: none;
    margin-bottom: 10px;
    margin-top: 30px;
    z-index: 600;
    height: 36px; 
}

#sitenav a
{
		color: #252525;
	display: block;
	float: left;
	text-decoration: none;
	height: 35px;
	border-right: 1px solid #D1CFC7;
	border-left: 1px solid #FFF;
	padding: 0px 10px;
	line-height: 35px;
	background-color: #F9F6EF;
	font-size: 0.95em;
	list-style: outside none none;
}

#sitenav ul
{
	border-top: 1px solid #FFF;
	padding-top: 6px;
}

#sitenav a:hover, #sitenav a.selected 
{
	color: #555;
   
}

/*-------probably don't need stuff below------------*/

#sitenav ul li
{
	color: #252525;
	display: block;
	float: left;
	text-decoration: none;
	height: 29px;
	border-right: 1px solid #D1CFC7;
	border-left: 1px solid #FFF;
	padding: 0px 10px;
	line-height: 35px;
	background-color: #F9F6EF;
	font-size: 0.95em;
	list-style: outside none none;

}

#sitenav ul li a 
{
    color: #252525;
    text-decoration: none;
    height: 31px;
    margin: -3px 0px 0px;
    display: block;
    line-height: 31px;
}


/*--------------pics maybe---------*/


#indexstuff
{
	margin-left: auto;
	margin-right: auto;
	width: 452px;
}

#indexpic
{
/*	float: left;
*/	border-top: 5px solid #29551A;
	padding: 1px;
/*	height: 300px;
*/	width: 450px;

	border-bottom: 5px solid #29551A;

}

#researchpic
{
	float: left;
	border-top: 5px solid #29551A;
	padding: 1px;
/*	height: 300px;
*/	width: 920px;

	border-bottom: 5px solid #29551A;

}

#researchpic img
{
	margin-top: 4px;
}

#peoplepic
{
	float: left;
	border-top: 5px solid #29551A;
	padding: 0px;

/*	height: 300px;

*/	width: 930px;

	border-bottom: 5px solid #29551A;
}

#peoplepic img
{
	margin-top: 4px;
}

#navCenter
{
	margin-left: auto;
	margin-right: auto;
	font-size: 48px;
}

#goRight
{
	float: right;
}

/*----------------Wrapper------------------*/

#wrapper
{
	width: 960px;
	padding: 5px 38px;
	margin: 0px auto;
	box-shadow: 0px 0px 7px #999;
}
/* ... */

